define superblock and rootDir/rootEntry structures. Initial testing works for reading out of disk.

--- a/libfs/Makefile
+++ b/libfs/Makefile
@@ -1,5 +1,31 @@
-libfs.a:
-	#TODO
+objs := disk.o fs.o
+CC := gcc
+CFLAGS := -Wall -Werror
 
+## Debug flag
+ifneq ($(D),1)
+CFLAGS	+= -O2
+else
+CFLAGS	+= -O0
+CFLAGS	+= -g
+endif
+
+# Don't print the commands unless explicitely requested with `make V=1`
+ifneq ($(V),1)
+Q = @
+V = 0
+endif
+
+# Compile static library
+libfs.a: $(objs)
+	ar rcs $@ $^
+
+# Generic Rule for compiling lib files
+%.o: %.c
+	@echo "CC	$@"
+	$(Q)$(CC) $^ -c -o $@ $(CFLAGS)
+
+# Cleaning Rule
 clean:
-	#TODO
+	@echo "CLEAN	$(shell pwd)"
+	$(Q)rm -rf $(objs) libfs.a
